# base-scotty

./: base-scotty.cabal
app/: Languages.hs  Main.hs
src/: Database.hs  Scotty.hs  Session.hs  Types.hs  Utils.hs
static/css/: bootstrap-icons.min.css  default.css
templates/: 404.html  base.html  base_bar.html  ginger_error.html  index.html  login.html  password-recovery.html  signup.html  simple.html  user-profile.html
