cabal-version:   3.14
name:            base-scotty
version:         0.1.0.0
license:
author:          Massimo Bortolato  
maintainer:      massimobortolato@duck.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wno-type-defaults -threaded

library
  import:           warnings
  exposed-modules:  Scotty

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base           ^>=4.21.0.0
    , ginger2
    , mtl
    , random
    , scotty
    , text
    , unliftio-core

  hs-source-dirs:   src
  default-language: GHC2024

executable hs-playground
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base           ^>=4.21.0.0
    , base-scotty
    , scotty

  hs-source-dirs:   app
  default-language: GHC2024
