cabal-version:   3.14
name:            base-scotty
version:         0.1.0.0
license:
author:          Massimo Bortolato  
maintainer:      massimobortolato@duck.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -threaded

library
  import:           warnings
  exposed-modules:
    Database
    Scotty
    Types

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base           ^>=4.21.0.0
    , ginger2
    , mtl
    , random
    , regex-tdfa
    , scotty
    , text
    , time
    , unliftio-core
    , uuid

  hs-source-dirs:   src
  default-language: GHC2024

executable hs-playground
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base                   ^>=4.21.0.0
    , base-scotty
    , scotty
    , wai-middleware-static

  hs-source-dirs:   app
  default-language: GHC2024
