cabal-version:   3.14
name:            base-scotty
version:         0.1.0.0
license:
author:          Massimo Bortolato  
maintainer:      massimobortolato@duck.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:      -Wall -threaded -Werror
  default-language: GHC2024

library
  import:           warnings
  exposed-modules:
    Database
    Scotty
    Session
    Types
    Utils

  build-depends:
    , aeson
    , base                  ^>=4.21.2.0
    , base64
    , bytestring
    , crypton
    , ginger2
    , mtl
    , network
    , random
    , regex-tdfa
    , resource-pool
    , scotty
    , sqlite-simple
    , stm
    , text
    , time
    , unliftio-core
    , unordered-containers
    , uuid
    , wai

  hs-source-dirs:   src
  default-language: GHC2024

executable tempo-app
  import:           warnings
  main-is:          Main.hs
  other-modules:    Languages
  build-depends:
    , aeson
    , base                   ^>=4.21.2.0
    , base-scotty
    , scotty
    , text
    , time
    , wai-middleware-static

  hs-source-dirs:   app
  default-language: GHC2024
